--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest httpx
         pip install -r requirements.txt
+        pip install -e .  # Registers 'elk' package for tests
 
-    - name: Run Tests
+    - name: Run pytest
       run: |
         pytest tests/
